// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="bp3-card bp3-elevation-0"
>
  <div
    className="mentions-legales"
  >
    <h1>
      Put your partner data here
    </h1>
  </div>
</div>
`;

exports[`should render correctly with info content 1`] = `
<div
  className="bp3-card bp3-elevation-0"
>
  <div
    className="mentions-legales"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<div>Custom content</div>",
        }
      }
    />
  </div>
</div>
`;
